Update from Fidus Writer

--- a/epub/EPUB/document-nav.xhtml
+++ b/epub/EPUB/document-nav.xhtml
@@ -14,6 +14,8 @@
         </li>
         <li><a href="document-1.xhtml#_1_0">CRI000: Front Matter</a>
           <ol>
+            <li><a href="document-1.xhtml#H353005">Title page</a>
+            </li>
             <li><a href="document-1.xhtml#H6627615">Pre-release v1.0</a>
             </li>
             <li><a href="document-1.xhtml#H8111132">Publication details</a>
@@ -32,7 +34,7 @@
                 </li>
                 <li><a href="document-1.xhtml#H99013">Method</a>
                 </li>
-                <li><a href="document-1.xhtml#H691848">How these textbooks were produced</a>
+                <li><a href="document-1.xhtml#H691848">How the textbook was produced</a>
                 </li>
                 <li><a href="document-1.xhtml#H8101608">Disclaimer</a>
                 </li>
@@ -355,6 +357,14 @@
                 <li><a href="document-16.xhtml#H8778968">Crisis management</a>
                 </li>
               </ol>
+            </li>
+          </ol>
+        </li>
+        <li><a href="document-17.xhtml#_17_0">CRIbib Bibliography</a>
+          <ol>
+            <li><a href="document-17.xhtml#H8291970">Communications</a>
+            </li>
+            <li><a href="document-17.xhtml#H6136407">Toolbox</a>
             </li>
           </ol>
         </li>
