Update from Fidus Writer

--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,11 @@
         </a>
         <ol>
           <li>
+            <a href="document-1.html#H353005">
+              Title page
+            </a>
+          </li>
+          <li>
             <a href="document-1.html#H6627615">
               Pre-release v1.0
             </a>
@@ -67,7 +72,7 @@
               </li>
               <li>
                 <a href="document-1.html#H691848">
-                  How these textbooks were produced
+                  How the textbook was produced
                 </a>
               </li>
               <li>
@@ -871,9 +876,31 @@
           </li>
         </ol>
       </li>
+      <li>
+        <a href="document-17.html">
+          CRIbib Bibliography
+        </a>
+      </li>
+      <li>
+        <a href="document-17.html#_17_0">
+          CRIbib Bibliography
+        </a>
+        <ol>
+          <li>
+            <a href="document-17.html#H8291970">
+              Communications
+            </a>
+          </li>
+          <li>
+            <a href="document-17.html#H6136407">
+              Toolbox
+            </a>
+          </li>
+        </ol>
+      </li>
     </ol>
     <p>Published by: Academy of Public Health Services in Düsseldorf</p>
-    <p>Last Updated: 1617896581</p>
+    <p>Last Updated: 1618245548</p>
     <p>Created: 1615132907</p>
     <p>Language: English</p>
     <p>Created by: Simon Worthington</p>
