--- a/html/document-10.html
+++ b/html/document-10.html
@@ -2,32 +2,30 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CRI11Annex – Checklist for infrastructure and resources in the crisis team</title>
+    <title>CRI11Annex-Checklist for public health offices in crisis mode</title>
     <link type="text/css" rel="stylesheet" href="css/document.css" />
     <link type="text/css" rel="stylesheet" href="css/aogPdf.css" />
   </head>
   <body>
-    <div class="article-part article-title" id="_10_0">CRI11Annex – Checklist for infrastructure and resources in the crisis team</div>
+    <div class="article-part article-title" id="_10_0">CRI11Annex-Checklist for public health offices in crisis mode</div>
     <div class="article-part article-heading article-subtitle" data-hidden="true"></div>
     <div class="article-part article-contributors article-authors" data-hidden="true"></div>
     <div class="article-part article-richtext article-abstract" data-hidden="true"></div>
     <div class="article-part article-tags article-keywords" data-hidden="true"></div>
     <div class="article-part article-richtext article-body">
-      <p></p>
       <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <table id="T54913031" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+      <table id="T85724381" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
         <caption><span class="label"></span></caption>
         <tbody>
           <tr>
             <td>
-              <p><em><strong>Topic?</strong></em></p>
+              <p><em><strong>Topic?</strong></em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
             </td>
             <td>
-              <p><em><strong>Title:</strong></em></p>
+              <p></p>
             </td>
             <td>
-              <p><em><strong>Infrastructure and resources in the crisis team</strong></em></p>
+              <p><em><strong>Title: Public health offices in crisis mode</strong></em></p>
             </td>
           </tr>
           <tr>
@@ -43,55 +41,68 @@
           </tr>
         </tbody>
       </table>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
-      <h3 id="H4260866">Rooms</h3>
-      <p>☐&nbsp;&nbsp; Prepare room for the work of the team</p>
-      <p>☐&nbsp;&nbsp; Prepare room for discussions of the situation</p>
-      <p>☐&nbsp;&nbsp; Prepare IT equipment</p>
-      <p>☐&nbsp;&nbsp; Organise keys</p>
-      <h3 id="H5650686">IT equipment</h3>
-      <p>☐&nbsp;&nbsp; Provide additional i-workstations (notebooks)</p>
-      <p>☐&nbsp;&nbsp; Install copier and printer near the team room</p>
-      <p>☐&nbsp;&nbsp; Have the beamer ready</p>
-      <p>☐&nbsp;&nbsp; Set up group mailbox for the team</p>
-      <p>☐&nbsp;&nbsp; Create a central data directory</p>
-      <p>☐&nbsp;&nbsp; Create accounts by function</p>
-      <p>☐&nbsp;&nbsp; Set up access to Twitter and Facebook and check availability at the workplace</p>
-      <p>☐&nbsp;&nbsp; Redundant IT connection independent of the in-house network</p>
-      <h3 id="H9723828">Telephone and fax</h3>
-      <p>☐&nbsp;&nbsp; Have special telephone connections ready for crises</p>
-      <p>☐&nbsp;&nbsp; Have special fax connections ready for crises</p>
-      <p>☐&nbsp;&nbsp; Define and communicate point of availability of team</p>
-      <p>☐&nbsp;&nbsp; Staffing to ensure point of availability of team&nbsp;</p>
-      <p>☐&nbsp;&nbsp; Set up answering machine for point of availability of team</p>
-      <p>☐&nbsp;&nbsp; Set up hunt group for a hotline (with answering machine)</p>
-      <p>☐&nbsp;&nbsp; Make technical preparations for call forwarding (handling instruction)</p>
-      <p>☐&nbsp;&nbsp; Have telephone set ready for conference calls</p>
-      <p>☐&nbsp;&nbsp; Create redundant telephone facilities (landline independent of in-house network and/or additional mobile phones - prepaid, to be activated in case of emergency)&nbsp;</p>
-      <h3 id="H4829806">Office equipment/technology</h3>
-      <p>☐&nbsp;&nbsp; Board, flipchart for presenting the situation</p>
-      <p>☐&nbsp;&nbsp; Whiteboard for team room</p>
-      <p>☐&nbsp;&nbsp; Board for documenting tasks</p>
-      <p>☐&nbsp;&nbsp; Install copier and printer near the team room</p>
-      <p>☐&nbsp;&nbsp; Cloakroom lockers for external staff</p>
-      <p>☐&nbsp;&nbsp; Hang clocks in team room</p>
-      <h3 id="H3998633">Materials</h3>
-      <p>☐&nbsp;&nbsp; Provide basic office supplies</p>
-      <p>☐&nbsp;&nbsp; Presentation case</p>
-      <p>☐&nbsp;&nbsp; Crockery, glasses, coffee machine</p>
-      <p>☐&nbsp;&nbsp; Maps (possibly electronic)</p>
-      <h3 id="H1955050">Templates</h3>
-      <p>&nbsp;☐&nbsp;&nbsp; Prepare distribution lists and update them in an emergency</p>
-      <p>☐&nbsp;&nbsp; Template for memos</p>
-      <p>☐&nbsp;&nbsp; Template for mission diary</p>
-      <p>☐&nbsp;&nbsp; Template for minutes</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+      <h3 id="H1727143">Alerts</h3>
+      <p>☐&nbsp;&nbsp; Rules for receipt of alerts (via on-call service?)</p>
+      <p>☐&nbsp;&nbsp; Checklist for first recipient of alert/on-call service</p>
+      <p>☐&nbsp;&nbsp; Alert list (scenario-dependent)</p>
+      <p>☐&nbsp;&nbsp; Internal alert list for the public health office</p>
+      <p>☐&nbsp;&nbsp; Notification list for external contacts&nbsp;</p>
+      <h3 id="H368347">Rules for access to public health office</h3>
+      <p>☐&nbsp;&nbsp; Persons authorised to access</p>
+      <p>☐&nbsp;&nbsp; Organisational arrangements for access (which routes, location of key cabinets etc.)</p>
+      <h3 id="H6256762">Organisation</h3>
+      <p>☐&nbsp;&nbsp; Define structure and scope of roles</p>
+      <p>☐&nbsp;&nbsp; Take into account integration of the crisis/work team into the crisis team structures of the region</p>
+      <p>☐&nbsp;&nbsp; Take into account the unfolding situation when setting up the team</p>
+      <p>☐&nbsp;&nbsp; Define tasks and agree these with heads of institution</p>
+      <p>☐&nbsp;&nbsp; Define processes/channels of communication</p>
+      <p>☐&nbsp;&nbsp; Define regular procedures e.g. discussions of the situation (schedule)</p>
+      <p>☐&nbsp;&nbsp; Define specialised areas of work, assign personnel and determine responsibilities</p>
       <p>&nbsp;</p>
-      <table id="T97609181" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+      <h3 id="H6553733">Human resources</h3>
+      <p>☐&nbsp;&nbsp; Overview of roles to be assigned</p>
+      <p>☐&nbsp;&nbsp; Overview of available staff</p>
+      <p>☐&nbsp;&nbsp; Staff planning overview</p>
+      <p>☐&nbsp;&nbsp; Specimen of duty roster</p>
+      <p>☐&nbsp;&nbsp; Overview of staff presence&nbsp;</p>
+      <p>☐&nbsp;&nbsp; Involvement of staff council&nbsp;</p>
+      <p>☐&nbsp;&nbsp; Overtime arrangements, ban on leave</p>
+      <p>☐&nbsp;&nbsp; Foreign language skills of staff</p>
+      <p>☐&nbsp;&nbsp; Staffing of hotline, if applicable</p>
+      <p>☐&nbsp;&nbsp; Administrative support (staff deployment, duty scheduling)</p>
+      <p>☐&nbsp;&nbsp; External consultants from other authorities and institutions&nbsp;</p>
+      <h3 id="H1488738">Team leadership</h3>
+      <p>☐&nbsp;&nbsp; Select personnel, think about deputies&nbsp;</p>
+      <p>☐&nbsp;&nbsp; Draw up checklist for tasks</p>
+      <p>☐&nbsp;&nbsp; How will task control be performed?&nbsp;</p>
+      <h3 id="H3845044">Situation reports&nbsp;</h3>
+      <p>☐&nbsp;&nbsp; Identify and train suitable staff</p>
+      <p>☐&nbsp;&nbsp; Available data from existing sources</p>
+      <p>☐&nbsp;&nbsp; Specimen mission diary (link to template)&nbsp;</p>
+      <p>☐&nbsp;&nbsp; Specimen situation report</p>
+      <h3 id="H5542312">Infrastructure (rooms, technology)</h3>
+      <p><strong>For details see separate checklist</strong></p>
+      <p>☐&nbsp;&nbsp; Room plan</p>
+      <p>☐&nbsp;&nbsp; Technical equipment</p>
+      <p>☐&nbsp;&nbsp; Alternative location</p>
+      <p>&nbsp;&nbsp;</p>
+      <h3 id="H5459435">Organisation&nbsp;&nbsp;</h3>
+      <h4 id="H2920450">Technical content, FAQs</h4>
+      <p>☐&nbsp;&nbsp; Responsible for preparing content</p>
+      <p>☐&nbsp;&nbsp; Sources (RKI, BMG, WHO etc.)</p>
+      <p>☐&nbsp;&nbsp; Preparation of handouts for workstations/updates</p>
+      <h4 id="H670308">Staffing of hotline</h4>
+      <p>&nbsp;☐&nbsp;&nbsp; Professional support (external staff, contract workers if possible)</p>
+      <p>☐&nbsp;&nbsp; Staffing of hotline (shift change every 4 -6 hours)&nbsp;</p>
+      <p>☐&nbsp;&nbsp; Duty roster</p>
+      <p>&nbsp;</p>
+      <table id="T15702181" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
         <caption><span class="label"></span></caption>
         <tbody>
           <tr>
             <td>
-              <p><em><strong>Institution:</strong></em></p>
+              <p><em><strong>Institution:</strong></em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
             </td>
             <td>
               <p></p>
@@ -102,7 +113,7 @@
           </tr>
           <tr>
             <td>
-              <p>Prepared by:&nbsp;</p>
+              <p>Prepared by:</p>
             </td>
             <td>
               <p></p>
@@ -113,7 +124,10 @@
           </tr>
         </tbody>
       </table>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
     </div>
     <section class="fnlist" role="doc-footnotes"></section>
   </body>
