Update from Fidus Writer

--- a/html/document-13.html
+++ b/html/document-13.html
@@ -2,108 +2,113 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CRI11Annex – Checklist for communications</title>
+    <title>CRI11Annex – Checklist as a planning guide for hospitals</title>
     <link type="text/css" rel="stylesheet" href="css/document.css" />
     <link type="text/css" rel="stylesheet" href="css/aogPdf.css" />
   </head>
   <body>
-    <div class="article-part article-title" id="_13_0">CRI11Annex – Checklist for communications</div>
+    <div class="article-part article-title" id="_13_0">CRI11Annex – Checklist as a planning guide for hospitals</div>
     <div class="article-part article-heading article-subtitle" data-hidden="true"></div>
     <div class="article-part article-contributors article-authors" data-hidden="true"></div>
     <div class="article-part article-richtext article-abstract" data-hidden="true"></div>
     <div class="article-part article-tags article-keywords" data-hidden="true"></div>
     <div class="article-part article-richtext article-body">
       <p></p>
+      <p>The checklist below is based on the content of Germany's National Pandemic Preparedness Plan Part I e<a href="file:///C:\Users\boesl_reg\AppData\Local\Microsoft\Windows\INetCache\Content.Outlook\SFW45WES\(https:\edoc.rki.de\handle\176904\187%20–%20German%20only)">(https://edoc.rki.de/handle/176904/187 – German only).</a></p>
+      <p></p>
       <p>&nbsp;</p>
-      <table id="T19470581" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+      <table id="T49784491" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
         <caption><span class="label"></span></caption>
         <tbody>
           <tr>
             <td>
-              <p><em><strong>Topic?</strong></em></p>
-            </td>
-            <td>
               <p><em><strong>Title:</strong></em></p>
-            </td>
-            <td>
-              <p><em><strong>Communications</strong></em></p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <p>Target group:&nbsp;</p>
             </td>
             <td>
               <p></p>
             </td>
             <td>
-              <p>Date:</p>
+              <p><em><strong>Planning guide for hospitals</strong></em></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <p>Target group</p>
+            </td>
+            <td>
+              <p>&nbsp;</p>
+            </td>
+            <td>
+              <p>Date</p>
             </td>
           </tr>
         </tbody>
       </table>
       <p>&nbsp;</p>
-      <h3 id="H3683887">Selecting the form of communication</h3>
-      <p>☐&nbsp;&nbsp; Press release</p>
-      <p>☐&nbsp;&nbsp; Press conference/expert interview</p>
-      <p>☐&nbsp;&nbsp; Hotline</p>
-      <p>☐&nbsp;&nbsp; FAQs</p>
-      <p>☐&nbsp;&nbsp; Website of the administrative unit</p>
-      <p>☐&nbsp;&nbsp; Social media (e.g. Twitter, Instagram)&nbsp;</p>
-      <h3 id="H351953">Content-related preparation&nbsp;</h3>
-      <p>☐&nbsp;&nbsp; What is the current situation?</p>
-      <p>☐&nbsp;&nbsp; What has happened, when and where?</p>
-      <p>☐&nbsp;&nbsp; What damage has been caused?</p>
-      <p>☐&nbsp;&nbsp; How many people (number) are affected?</p>
-      <p>☐&nbsp;&nbsp; How is a situation likely to develop? Best case vs. worst case</p>
-      <p>☐&nbsp;&nbsp; What action has been taken so far by the authorities?</p>
-      <p>☐&nbsp;&nbsp; What are the authorities planning to do? Activities?</p>
-      <p>☐&nbsp;&nbsp; Who will be affected? What (behavioural) rules follow as a result of the incident?</p>
-      <p>☐&nbsp;&nbsp; What specialist information is relevant?</p>
-      <p>☐&nbsp;&nbsp; What information do regional/national bodies have in reserve?</p>
-      <p>☐&nbsp;&nbsp; What easy-to-understand information is relevant?&nbsp;</p>
-      <p>☐&nbsp;&nbsp; What are the most important messages for the general public?</p>
-      <h3 id="H7689813">Press release</h3>
-      <p>☐&nbsp;&nbsp; What? When? Where? Who?&nbsp;</p>
-      <p>☐&nbsp;&nbsp; Contact person&nbsp;</p>
-      <p>☐&nbsp;&nbsp; Date, time if known</p>
-      <p>☐&nbsp;&nbsp; Website, social media, further information and contact data if available&nbsp;</p>
-      <p>☐&nbsp;&nbsp; Press spokesperson</p>
-      <p>☐&nbsp;&nbsp; Other competent contacts, e.g. fire service, police, (higher) public health authorities, senate department</p>
-      <p></p>
-      <h2 id="H59697">Checklist – press conference</h2>
-      <p>(based on preliminary work by Christoph Lang, former Director of the Press Office, Senate Department for Health and Equality)</p>
-      <h3 id="H6901633">Invitation</h3>
-      <p>☐&nbsp;&nbsp; Specified time, location and duration&nbsp;</p>
-      <p>☐&nbsp;&nbsp; Support for media representatives (possibly on site)</p>
-      <p>☐&nbsp;&nbsp; Designate room for individual interviews (radio, podcasts, television)</p>
-      <p>☐&nbsp;&nbsp; Prepare press folder</p>
-      <p>☐&nbsp;&nbsp; Specify briefed interview partners</p>
-      <p>☐&nbsp;&nbsp; Determine telephone availability&nbsp;&nbsp;</p>
-      <h3 id="H5004432">Cordons/restrictions on access</h3>
-      <p>&nbsp;☐&nbsp;&nbsp; Briefing for security services</p>
-      <h3 id="H3108982">Press room</h3>
-      <p>☐&nbsp;&nbsp; Catering (e.g. beverages, snacks, for example sandwiches)</p>
-      <p>☐&nbsp;&nbsp; Work facilities: chairs and desks</p>
-      <p>☐&nbsp;&nbsp; Some power outlets (provide multi-sockets if needed) for charging smartphones and notebooks</p>
-      <p>☐&nbsp;&nbsp; Ideally also WLAN (provide access codes if necessary)</p>
-      <p>☐&nbsp;&nbsp; Prepare screens/pinboards and flipcharts</p>
-      <p>☐&nbsp;&nbsp; Specify TV-appropriate background for interviews</p>
-      <h3 id="H6595140">Support for journalists</h3>
-      <p>☐&nbsp;&nbsp; Trained officer (press spokesperson) permanently available</p>
-      <p>☐&nbsp;&nbsp; Alternative -– officer permanently on call?</p>
-      <p>☐&nbsp;&nbsp; Specify telephone availability, possibly hotline</p>
-      <h3 id="H8837330">Regular press briefings</h3>
-      <p>☐&nbsp;&nbsp; Who talks?&nbsp;</p>
-      <p>☐&nbsp;&nbsp; Are the relevant persons informed?&nbsp;</p>
-      <p>☐&nbsp;&nbsp; Media training completed?</p>
-      <p>☐&nbsp;&nbsp; Experts on site? In contact with media representatives?</p>
-      <table id="T70486011" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+      <h3 id="H7945097">Background</h3>
+      <p>In a widespread endemic/pandemic it is to be assumed that, compared to a limited outbreak, the total number of sick people as well as the proportion of seriously ill patients will be significantly higher. Consequently, an increased burden on inpatient hospital care is to be expected, and capacities may be overstretched.</p>
+      <p><em><strong>BUT: Doctors, nurses and other hospital staff may themselves be absent due to illness, and existing capacities can also be limited in this way.</strong></em></p>
+      <p>The massive influx of patients requiring inpatient treatment, some of whom require intensive care/ventilation, requires hospitals to clearly define organisational measures in order to ensure that these needs can be met.</p>
+      <p>Planning and preparation at the local/sub-regional level require the involvement of all crisis and disaster response structures.&nbsp;</p>
+      <h3 id="H3752751">Preparatory measures</h3>
+      <p>☐&nbsp;&nbsp; Vaccinate staff against seasonal influenza</p>
+      <p>☐&nbsp;&nbsp; Align contingency plans, particularly for hospitals and public health offices, with pandemic preparedness plan</p>
+      <p>☐&nbsp;&nbsp; Inform and train staff on contingency plans and hygiene management</p>
+      <h3 id="H2170902"><br>Organisational measures to ensure inpatient care</h3>
+      <p>☐&nbsp;&nbsp; Create/increase bed capacities for additional patients</p>
+      <p>☐&nbsp;&nbsp; Suspend elective admissions</p>
+      <p>☐&nbsp;&nbsp; Discharge patients as soon as possible</p>
+      <p>☐&nbsp;&nbsp; Involve other wards (e.g. dermatology, ophthalmology – taking into account pandemic-specific requirements)</p>
+      <h3 id="H8420461">HR management</h3>
+      <p>☐&nbsp;&nbsp; Increase human resources (e.g. redeploy personnel from areas which now tie up fewer staff due to suspension of elective admissions; include medical students in their final year of training etc.)</p>
+      <p>☐&nbsp;&nbsp; Exclude staff with symptoms from patient care</p>
+      <h3 id="H3837555">Stockpiling/management strategy for rapid procurement in case of an incident</h3>
+      <p>☐&nbsp;&nbsp; Antibiotics, analgesics, sedatives</p>
+      <p>☐&nbsp;&nbsp; Disinfectants</p>
+      <p>☐&nbsp;&nbsp; Personal protective equipment (PPE):</p>
+      <p>☐&nbsp;&nbsp; ☐ disposable gloves&nbsp;</p>
+      <p>☐&nbsp;&nbsp; ☐ surgical masks</p>
+      <p>☐&nbsp;&nbsp; ☐ FFP2 masks/FFP3 masks&nbsp;</p>
+      <h3 id="H5485324">Inform and train staff</h3>
+      <p>☐ Regularly refresh level of information of staff:&nbsp;</p>
+      <p>☐&nbsp;&nbsp; ☐ organisational preparations</p>
+      <p>☐&nbsp;&nbsp; ☐ schedules&nbsp;</p>
+      <p>☐&nbsp;&nbsp; ☐ hygiene management</p>
+      <p>☐&nbsp;&nbsp; Specific training in patient treatment and care for staff redeployed from other areas</p>
+      <h3 id="H2576398">Measures for personal protection</h3>
+      <p>☐&nbsp;&nbsp; Anti-viral prophylaxis, where appropriate</p>
+      <p>☐&nbsp;&nbsp; Vaccination, where appropriate&nbsp;</p>
+      <h3 id="H2443189">Equipment of treatment units</h3>
+      <p>☐&nbsp;&nbsp; Cohort isolation must be possible; i.e. 'ward sluice' or sluice in foyer of a building used in its entirety as a treatment unit</p>
+      <p>☐&nbsp;&nbsp; The ventilation system should be checked in order to ascertain what measures can be taken to prevent further spread into other areas of the hospital.</p>
+      <p>☐&nbsp;&nbsp; Possibility of oxygen supply (if possible a central supply)</p>
+      <p>☐&nbsp;&nbsp; Ventilation beds</p>
+      <p>☐&nbsp;&nbsp; Medical equipment (e.g. catheters, infusion devices, medicines)</p>
+      <p>☐&nbsp;&nbsp; X-ray units (including mobile X-ray machines)</p>
+      <p>☐&nbsp;&nbsp; Ultrasound, ECG, defibrillator unit, pulse oximetry&nbsp;&nbsp;</p>
+      <h3 id="H5831071">Organisation</h3>
+      <p>☐&nbsp;&nbsp; Separate area for admission of infectious patients</p>
+      <p>☐&nbsp;&nbsp; Check indication for admission&nbsp;</p>
+      <p>☐&nbsp;&nbsp; Separate treatment area from remaining care provision, if possible also include X-ray area&nbsp;</p>
+      <p>☐&nbsp;&nbsp; The treatment area should include an ICU.&nbsp;</p>
+      <p>☐&nbsp;&nbsp; Manage bed capacities&nbsp;</p>
+      <h3 id="H9502955">Hygiene measures in the hospital&nbsp;</h3>
+      <p>The following sources provide important technical recommendations:</p>
+      <p>☐&nbsp;&nbsp; RKI: Recommendation of the RKI for hygiene measures in patients with suspected or proven influenza</p>
+      <p>☐&nbsp;&nbsp; BAuA: Resolution 609 – Occupational safety and health when influenza occurs, with a particular focus on respiratory protection&nbsp;</p>
+      <p>In addition, hygiene plans should also be reviewed.</p>
+      <p>☐&nbsp;&nbsp; Personal protective measures for medical staff</p>
+      <p>☐&nbsp;&nbsp; Waste disposal according to waste code AS 180104 pursuant to LAGA&nbsp;</p>
+      <p>☐&nbsp;&nbsp; Internal patient transport</p>
+      <p>If possible the patient should wear a surgical mask, and staff should wear protective clothing and a respirator mask. Contact surfaces and means of transport must be disinfected immediately after transport.</p>
+      <p>☐&nbsp;&nbsp; Dealing with the deceased&nbsp;</p>
+      <p>Handling the remains of deceased COVID-19 patients (as of 4 March 2020) does not require special containment as in the case of highly contagious infectious diseases of a different aetiology. When standard hygiene rules are applied, handling infectious corpses does not pose a particular risk of infection. Unprotected contact with secretions that contain pathogens should generally be avoided.</p>
+      <table id="T33400041" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
         <caption><span class="label"></span></caption>
         <tbody>
           <tr>
             <td>
-              <p><em><strong>Institution:</strong></em>&nbsp;&nbsp;</p>
+              <p><em><strong>Institution:</strong></em></p>
             </td>
             <td>
               <p></p>
@@ -114,7 +119,7 @@
           </tr>
           <tr>
             <td>
-              <p>Prepared by:&nbsp;</p>
+              <p>Prepared by:</p>
             </td>
             <td>
               <p></p>
@@ -125,6 +130,7 @@
           </tr>
         </tbody>
       </table>
+      <p>&nbsp;</p>
       <p>&nbsp;</p>
     </div>
     <section class="fnlist" role="doc-footnotes"></section>
