--- a/html/document-12.html
+++ b/html/document-12.html
@@ -2,108 +2,88 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CRI11Annex – Checklist as a planning guide for hospitals</title>
+    <title>CRI11Annex – Checklist as a planning guide for public health offices</title>
     <link type="text/css" rel="stylesheet" href="css/document.css" />
     <link type="text/css" rel="stylesheet" href="css/aogPdf.css" />
   </head>
   <body>
-    <div class="article-part article-title" id="_12_0">CRI11Annex – Checklist as a planning guide for hospitals</div>
+    <div class="article-part article-title" id="_12_0">CRI11Annex – Checklist as a planning guide for public health offices</div>
     <div class="article-part article-heading article-subtitle" data-hidden="true"></div>
     <div class="article-part article-contributors article-authors" data-hidden="true"></div>
     <div class="article-part article-richtext article-abstract" data-hidden="true"></div>
     <div class="article-part article-tags article-keywords" data-hidden="true"></div>
     <div class="article-part article-richtext article-body">
       <p></p>
-      <p>The checklist below is based on the content of Germany's National Pandemic Preparedness Plan Part I e<a href="file:///C:\Users\boesl_reg\AppData\Local\Microsoft\Windows\INetCache\Content.Outlook\SFW45WES\(https:\edoc.rki.de\handle\176904\187%20–%20German%20only)">(https://edoc.rki.de/handle/176904/187 – German only).</a></p>
-      <p></p>
       <p>&nbsp;</p>
-      <table id="T49784491" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+      <table id="T42285431" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
         <caption><span class="label"></span></caption>
         <tbody>
           <tr>
             <td>
-              <p><em><strong>Title:</strong></em></p>
+              <p><em><strong>Topic?</strong></em>&nbsp;</p>
             </td>
             <td>
               <p></p>
             </td>
             <td>
-              <p><em><strong>Planning guide for hospitals</strong></em></p>
+              <p><em><strong>Title: Planning guide for public health offices</strong></em></p>
             </td>
           </tr>
           <tr>
             <td>
-              <p>Target group</p>
+              <p>Target group:&nbsp;</p>
             </td>
             <td>
-              <p>&nbsp;</p>
+              <p></p>
             </td>
             <td>
-              <p>Date</p>
+              <p>Date:</p>
             </td>
           </tr>
         </tbody>
       </table>
-      <p>&nbsp;</p>
-      <h3 id="H7945097">Background</h3>
-      <p>In a widespread endemic/pandemic it is to be assumed that, compared to a limited outbreak, the total number of sick people as well as the proportion of seriously ill patients will be significantly higher. Consequently, an increased burden on inpatient hospital care is to be expected, and capacities may be overstretched.</p>
-      <p><em><strong>BUT: Doctors, nurses and other hospital staff may themselves be absent due to illness, and existing capacities can also be limited in this way.</strong></em></p>
-      <p>The massive influx of patients requiring inpatient treatment, some of whom require intensive care/ventilation, requires hospitals to clearly define organisational measures in order to ensure that these needs can be met.</p>
-      <p>Planning and preparation at the local/sub-regional level require the involvement of all crisis and disaster response structures.&nbsp;</p>
-      <h3 id="H3752751">Preparatory measures</h3>
-      <p>☐&nbsp;&nbsp; Vaccinate staff against seasonal influenza</p>
-      <p>☐&nbsp;&nbsp; Align contingency plans, particularly for hospitals and public health offices, with pandemic preparedness plan</p>
-      <p>☐&nbsp;&nbsp; Inform and train staff on contingency plans and hygiene management</p>
-      <h3 id="H2170902"><br>Organisational measures to ensure inpatient care</h3>
-      <p>☐&nbsp;&nbsp; Create/increase bed capacities for additional patients</p>
-      <p>☐&nbsp;&nbsp; Suspend elective admissions</p>
-      <p>☐&nbsp;&nbsp; Discharge patients as soon as possible</p>
-      <p>☐&nbsp;&nbsp; Involve other wards (e.g. dermatology, ophthalmology – taking into account pandemic-specific requirements)</p>
-      <h3 id="H8420461">HR management</h3>
+      <p>&nbsp;&nbsp;&nbsp;</p>
+      <h3 id="H2442121">Coordination</h3>
+      <p>☐&nbsp;&nbsp; Situation-dependent decision on internal management structure</p>
+      <p>☐&nbsp;&nbsp; Coordination of measures</p>
+      <p>☐&nbsp;&nbsp; Documentation and evaluation</p>
+      <p>☐&nbsp;&nbsp; Ongoing evaluation of the incident</p>
+      <p>☐&nbsp;&nbsp; Demobilisation</p>
+      <h3 id="H3384617">Risk management</h3>
+      <p>☐&nbsp;&nbsp; Risk assessment&nbsp;</p>
+      <h3 id="H9541090">HR management</h3>
       <p>☐&nbsp;&nbsp; Increase human resources (e.g. redeploy personnel from areas which now tie up fewer staff due to suspension of elective admissions; include medical students in their final year of training etc.)</p>
       <p>☐&nbsp;&nbsp; Exclude staff with symptoms from patient care</p>
-      <h3 id="H3837555">Stockpiling/management strategy for rapid procurement in case of an incident</h3>
-      <p>☐&nbsp;&nbsp; Antibiotics, analgesics, sedatives</p>
-      <p>☐&nbsp;&nbsp; Disinfectants</p>
-      <p>☐&nbsp;&nbsp; Personal protective equipment (PPE):</p>
-      <p>☐&nbsp;&nbsp; ☐ disposable gloves&nbsp;</p>
-      <p>☐&nbsp;&nbsp; ☐ surgical masks</p>
-      <p>☐&nbsp;&nbsp; ☐ FFP2 masks/FFP3 masks&nbsp;</p>
-      <h3 id="H5485324">Inform and train staff</h3>
-      <p>☐ Regularly refresh level of information of staff:&nbsp;</p>
-      <p>☐&nbsp;&nbsp; ☐ organisational preparations</p>
-      <p>☐&nbsp;&nbsp; ☐ schedules&nbsp;</p>
-      <p>☐&nbsp;&nbsp; ☐ hygiene management</p>
-      <p>☐&nbsp;&nbsp; Specific training in patient treatment and care for staff redeployed from other areas</p>
-      <h3 id="H2576398">Measures for personal protection</h3>
-      <p>☐&nbsp;&nbsp; Anti-viral prophylaxis, where appropriate</p>
-      <p>☐&nbsp;&nbsp; Vaccination, where appropriate&nbsp;</p>
-      <h3 id="H2443189">Equipment of treatment units</h3>
-      <p>☐&nbsp;&nbsp; Cohort isolation must be possible; i.e. 'ward sluice' or sluice in foyer of a building used in its entirety as a treatment unit</p>
-      <p>☐&nbsp;&nbsp; The ventilation system should be checked in order to ascertain what measures can be taken to prevent further spread into other areas of the hospital.</p>
-      <p>☐&nbsp;&nbsp; Possibility of oxygen supply (if possible a central supply)</p>
-      <p>☐&nbsp;&nbsp; Ventilation beds</p>
-      <p>☐&nbsp;&nbsp; Medical equipment (e.g. catheters, infusion devices, medicines)</p>
-      <p>☐&nbsp;&nbsp; X-ray units (including mobile X-ray machines)</p>
-      <p>☐&nbsp;&nbsp; Ultrasound, ECG, defibrillator unit, pulse oximetry&nbsp;&nbsp;</p>
-      <h3 id="H5831071">Organisation</h3>
-      <p>☐&nbsp;&nbsp; Separate area for admission of infectious patients</p>
-      <p>☐&nbsp;&nbsp; Check indication for admission&nbsp;</p>
-      <p>☐&nbsp;&nbsp; Separate treatment area from remaining care provision, if possible also include X-ray area&nbsp;</p>
-      <p>☐&nbsp;&nbsp; The treatment area should include an ICU.&nbsp;</p>
-      <p>☐&nbsp;&nbsp; Manage bed capacities&nbsp;</p>
-      <h3 id="H9502955">Hygiene measures in the hospital&nbsp;</h3>
-      <p>The following sources provide important technical recommendations:</p>
-      <p>☐&nbsp;&nbsp; RKI: Recommendation of the RKI for hygiene measures in patients with suspected or proven influenza</p>
-      <p>☐&nbsp;&nbsp; BAuA: Resolution 609 – Occupational safety and health when influenza occurs, with a particular focus on respiratory protection&nbsp;</p>
-      <p>In addition, hygiene plans should also be reviewed.</p>
-      <p>☐&nbsp;&nbsp; Personal protective measures for medical staff</p>
-      <p>☐&nbsp;&nbsp; Waste disposal according to waste code AS 180104 pursuant to LAGA&nbsp;</p>
-      <p>☐&nbsp;&nbsp; Internal patient transport</p>
-      <p>If possible the patient should wear a surgical mask, and staff should wear protective clothing and a respirator mask. Contact surfaces and means of transport must be disinfected immediately after transport.</p>
-      <p>☐&nbsp;&nbsp; Dealing with the deceased&nbsp;</p>
-      <p>Handling the remains of deceased COVID-19 patients (as of 4 March 2020) does not require special containment as in the case of highly contagious infectious diseases of a different aetiology. When standard hygiene rules are applied, handling infectious corpses does not pose a particular risk of infection. Unprotected contact with secretions that contain pathogens should generally be avoided.</p>
-      <table id="T33400041" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+      <h3 id="H1662235">Communications</h3>
+      <p>☐&nbsp;&nbsp; Risk and crisis communication</p>
+      <p>☐&nbsp;&nbsp; Internal communication within the municipality</p>
+      <p>☐&nbsp;&nbsp; Public information</p>
+      <p>☐&nbsp;&nbsp; Prepare press work professionally, possibly set up hotline&nbsp;</p>
+      <h3 id="H6402131">Outbreak investigation&nbsp;</h3>
+      <p>☐&nbsp;&nbsp; Occupational safety and health, ensure provision of personal protective equipment</p>
+      <p>☐&nbsp;&nbsp; Routine epidemiological surveillance</p>
+      <p>☐&nbsp;&nbsp; Identify contacts, categorise contacts</p>
+      <p>☐&nbsp;&nbsp; Define anti-epidemic measures pursuant to IfSG</p>
+      <p>☐&nbsp;&nbsp; Order diagnostic measures and decide on scope of investigation</p>
+      <p>☐&nbsp;&nbsp; Make arrangements for sampling and sample transport</p>
+      <p>☐&nbsp;&nbsp; Protective measures to reduce contacts</p>
+      <p>☐&nbsp;&nbsp; Organise and monitor the patient</p>
+      <p>☐&nbsp;&nbsp; Define and monitor isolation arrangements&nbsp;</p>
+      <p>☐&nbsp;&nbsp; Decide on nature and scope of disinfection measures and their monitoring</p>
+      <p>☐&nbsp;&nbsp; Decide on decontamination measures, if applicable&nbsp;</p>
+      <h3 id="H4067619">Advice</h3>
+      <p>☐&nbsp;&nbsp; Advise affected persons on what to do</p>
+      <p>☐&nbsp;&nbsp; Inform and advise other public authorities, institutions and the public</p>
+      <p>☐&nbsp;&nbsp; Set up hotline</p>
+      <h3 id="H7293213">REGULATORY TASKS</h3>
+      <p>☐&nbsp;&nbsp; Ordering of isolation by the medical officer</p>
+      <p>☐&nbsp;&nbsp; Ordering of autopsy, certification of death, oversight of transport of corpses and cremation</p>
+      <p>☐&nbsp;&nbsp; Ordering of prohibitions on activities, participation and visits</p>
+      <p>☐&nbsp;&nbsp; Ordering of quarantine and isolation</p>
+      <p>☐&nbsp;&nbsp; Disposal management</p>
+      <p>☐&nbsp;&nbsp; Possibly coordination of vaccinations</p>
+      <p>☐&nbsp;&nbsp; Possibly organisation of post-exposure prophylaxis</p>
+      <table id="T61201601" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
         <caption><span class="label"></span></caption>
         <tbody>
           <tr>
@@ -125,11 +105,12 @@
               <p></p>
             </td>
             <td>
-              <p>Filed under:</p>
+              <p> Filed under:</p>
             </td>
           </tr>
         </tbody>
       </table>
+      <p>&nbsp;</p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
     </div>
