Update from Fidus Writer

--- a/html/document-11.html
+++ b/html/document-11.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CRI11Annex – Checklist as a planning guide for public health offices</title>
+    <title>CRI11Annex – Checklist for infrastructure and resources in the crisis team</title>
     <link type="text/css" rel="stylesheet" href="css/document.css" />
     <link type="text/css" rel="stylesheet" href="css/aogPdf.css" />
   </head>
   <body>
-    <div class="article-part article-title" id="_11_0">CRI11Annex – Checklist as a planning guide for public health offices</div>
+    <div class="article-part article-title" id="_11_0">CRI11Annex – Checklist for infrastructure and resources in the crisis team</div>
     <div class="article-part article-heading article-subtitle" data-hidden="true"></div>
     <div class="article-part article-contributors article-authors" data-hidden="true"></div>
     <div class="article-part article-richtext article-abstract" data-hidden="true"></div>
@@ -15,18 +15,19 @@
     <div class="article-part article-richtext article-body">
       <p></p>
       <p>&nbsp;</p>
-      <table id="T42285431" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+      <p>&nbsp;</p>
+      <table id="T54913031" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
         <caption><span class="label"></span></caption>
         <tbody>
           <tr>
             <td>
-              <p><em><strong>Topic?</strong></em>&nbsp;</p>
+              <p><em><strong>Topic?</strong></em></p>
             </td>
             <td>
-              <p></p>
+              <p><em><strong>Title:</strong></em></p>
             </td>
             <td>
-              <p><em><strong>Title: Planning guide for public health offices</strong></em></p>
+              <p><em><strong>Infrastructure and resources in the crisis team</strong></em></p>
             </td>
           </tr>
           <tr>
@@ -42,48 +43,50 @@
           </tr>
         </tbody>
       </table>
-      <p>&nbsp;&nbsp;&nbsp;</p>
-      <h3 id="H2442121">Coordination</h3>
-      <p>☐&nbsp;&nbsp; Situation-dependent decision on internal management structure</p>
-      <p>☐&nbsp;&nbsp; Coordination of measures</p>
-      <p>☐&nbsp;&nbsp; Documentation and evaluation</p>
-      <p>☐&nbsp;&nbsp; Ongoing evaluation of the incident</p>
-      <p>☐&nbsp;&nbsp; Demobilisation</p>
-      <h3 id="H3384617">Risk management</h3>
-      <p>☐&nbsp;&nbsp; Risk assessment&nbsp;</p>
-      <h3 id="H9541090">HR management</h3>
-      <p>☐&nbsp;&nbsp; Increase human resources (e.g. redeploy personnel from areas which now tie up fewer staff due to suspension of elective admissions; include medical students in their final year of training etc.)</p>
-      <p>☐&nbsp;&nbsp; Exclude staff with symptoms from patient care</p>
-      <h3 id="H1662235">Communications</h3>
-      <p>☐&nbsp;&nbsp; Risk and crisis communication</p>
-      <p>☐&nbsp;&nbsp; Internal communication within the municipality</p>
-      <p>☐&nbsp;&nbsp; Public information</p>
-      <p>☐&nbsp;&nbsp; Prepare press work professionally, possibly set up hotline&nbsp;</p>
-      <h3 id="H6402131">Outbreak investigation&nbsp;</h3>
-      <p>☐&nbsp;&nbsp; Occupational safety and health, ensure provision of personal protective equipment</p>
-      <p>☐&nbsp;&nbsp; Routine epidemiological surveillance</p>
-      <p>☐&nbsp;&nbsp; Identify contacts, categorise contacts</p>
-      <p>☐&nbsp;&nbsp; Define anti-epidemic measures pursuant to IfSG</p>
-      <p>☐&nbsp;&nbsp; Order diagnostic measures and decide on scope of investigation</p>
-      <p>☐&nbsp;&nbsp; Make arrangements for sampling and sample transport</p>
-      <p>☐&nbsp;&nbsp; Protective measures to reduce contacts</p>
-      <p>☐&nbsp;&nbsp; Organise and monitor the patient</p>
-      <p>☐&nbsp;&nbsp; Define and monitor isolation arrangements&nbsp;</p>
-      <p>☐&nbsp;&nbsp; Decide on nature and scope of disinfection measures and their monitoring</p>
-      <p>☐&nbsp;&nbsp; Decide on decontamination measures, if applicable&nbsp;</p>
-      <h3 id="H4067619">Advice</h3>
-      <p>☐&nbsp;&nbsp; Advise affected persons on what to do</p>
-      <p>☐&nbsp;&nbsp; Inform and advise other public authorities, institutions and the public</p>
-      <p>☐&nbsp;&nbsp; Set up hotline</p>
-      <h3 id="H7293213">REGULATORY TASKS</h3>
-      <p>☐&nbsp;&nbsp; Ordering of isolation by the medical officer</p>
-      <p>☐&nbsp;&nbsp; Ordering of autopsy, certification of death, oversight of transport of corpses and cremation</p>
-      <p>☐&nbsp;&nbsp; Ordering of prohibitions on activities, participation and visits</p>
-      <p>☐&nbsp;&nbsp; Ordering of quarantine and isolation</p>
-      <p>☐&nbsp;&nbsp; Disposal management</p>
-      <p>☐&nbsp;&nbsp; Possibly coordination of vaccinations</p>
-      <p>☐&nbsp;&nbsp; Possibly organisation of post-exposure prophylaxis</p>
-      <table id="T61201601" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
+      <h3 id="H4260866">Rooms</h3>
+      <p>☐&nbsp;&nbsp; Prepare room for the work of the team</p>
+      <p>☐&nbsp;&nbsp; Prepare room for discussions of the situation</p>
+      <p>☐&nbsp;&nbsp; Prepare IT equipment</p>
+      <p>☐&nbsp;&nbsp; Organise keys</p>
+      <h3 id="H5650686">IT equipment</h3>
+      <p>☐&nbsp;&nbsp; Provide additional i-workstations (notebooks)</p>
+      <p>☐&nbsp;&nbsp; Install copier and printer near the team room</p>
+      <p>☐&nbsp;&nbsp; Have the beamer ready</p>
+      <p>☐&nbsp;&nbsp; Set up group mailbox for the team</p>
+      <p>☐&nbsp;&nbsp; Create a central data directory</p>
+      <p>☐&nbsp;&nbsp; Create accounts by function</p>
+      <p>☐&nbsp;&nbsp; Set up access to Twitter and Facebook and check availability at the workplace</p>
+      <p>☐&nbsp;&nbsp; Redundant IT connection independent of the in-house network</p>
+      <h3 id="H9723828">Telephone and fax</h3>
+      <p>☐&nbsp;&nbsp; Have special telephone connections ready for crises</p>
+      <p>☐&nbsp;&nbsp; Have special fax connections ready for crises</p>
+      <p>☐&nbsp;&nbsp; Define and communicate point of availability of team</p>
+      <p>☐&nbsp;&nbsp; Staffing to ensure point of availability of team&nbsp;</p>
+      <p>☐&nbsp;&nbsp; Set up answering machine for point of availability of team</p>
+      <p>☐&nbsp;&nbsp; Set up hunt group for a hotline (with answering machine)</p>
+      <p>☐&nbsp;&nbsp; Make technical preparations for call forwarding (handling instruction)</p>
+      <p>☐&nbsp;&nbsp; Have telephone set ready for conference calls</p>
+      <p>☐&nbsp;&nbsp; Create redundant telephone facilities (landline independent of in-house network and/or additional mobile phones - prepaid, to be activated in case of emergency)&nbsp;</p>
+      <h3 id="H4829806">Office equipment/technology</h3>
+      <p>☐&nbsp;&nbsp; Board, flipchart for presenting the situation</p>
+      <p>☐&nbsp;&nbsp; Whiteboard for team room</p>
+      <p>☐&nbsp;&nbsp; Board for documenting tasks</p>
+      <p>☐&nbsp;&nbsp; Install copier and printer near the team room</p>
+      <p>☐&nbsp;&nbsp; Cloakroom lockers for external staff</p>
+      <p>☐&nbsp;&nbsp; Hang clocks in team room</p>
+      <h3 id="H3998633">Materials</h3>
+      <p>☐&nbsp;&nbsp; Provide basic office supplies</p>
+      <p>☐&nbsp;&nbsp; Presentation case</p>
+      <p>☐&nbsp;&nbsp; Crockery, glasses, coffee machine</p>
+      <p>☐&nbsp;&nbsp; Maps (possibly electronic)</p>
+      <h3 id="H1955050">Templates</h3>
+      <p>&nbsp;☐&nbsp;&nbsp; Prepare distribution lists and update them in an emergency</p>
+      <p>☐&nbsp;&nbsp; Template for memos</p>
+      <p>☐&nbsp;&nbsp; Template for mission diary</p>
+      <p>☐&nbsp;&nbsp; Template for minutes</p>
+      <p>&nbsp;</p>
+      <table id="T97609181" class="table-100 table-center table-fixed" data-width="100" data-aligned="center" data-layout="fixed" data-category="none">
         <caption><span class="label"></span></caption>
         <tbody>
           <tr>
@@ -99,20 +102,18 @@
           </tr>
           <tr>
             <td>
-              <p>Prepared by:</p>
+              <p>Prepared by:&nbsp;</p>
             </td>
             <td>
               <p></p>
             </td>
             <td>
-              <p> Filed under:</p>
+              <p>Filed under:</p>
             </td>
           </tr>
         </tbody>
       </table>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;</p>
     </div>
     <section class="fnlist" role="doc-footnotes"></section>
   </body>
